--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "electron/main.cjs",
   "scripts": {
     "dev": "npm run lint && concurrently -k \"vite\" \"npm:dev:electron\"",
-    "dev:electron": "wait-on http://localhost:5173 && cross-env VITE_DEV_SERVER_URL=http://localhost:5173 node electron/launch.cjs",
+    "dev:electron": "wait-on http-get://127.0.0.1:5173 && cross-env VITE_DEV_SERVER_URL=http://127.0.0.1:5173 node electron/launch.cjs",
     "build": "vite build",
     "preview": "vite preview",
     "start": "node electron/launch.cjs",
