--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "@xterm/addon-webgl": "^0.18.0",
     "@xterm/xterm": "^5.5.0",
     "clsx": "2.1.1",
-    "electron-windows-security": "^0.0.7",
     "ghostty-web": "^0.4.0",
     "keytar": "^7.9.0",
     "lucide-react": "0.560.0",
+    "netcatty-windows-hello": "file:electron/native/netcatty-windows-hello",
     "node-hid": "^3.2.0",
     "node-pty": "1.1.0-beta19",
     "react": "^19.2.1",
