Adds detailed packaging configs and safer dev detection
Introduces explicit OS/arch packaging targets and artifact naming for all platforms, and adds advanced installer options for Windows. Refines dev/prod environment detection to avoid accidental dev mode in packaged apps, improving build reliability and distribution clarity.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "preview": "vite preview",
     "start": "node electron/launch.cjs",
     "pack": "npm run build && cross-env NODE_OPTIONS=--disable-warning=DEP0190 electron-builder --config electron-builder.json",
+    "pack:dir": "npm run build && cross-env NODE_OPTIONS=--disable-warning=DEP0190 electron-builder --config electron-builder.json --dir",
+    "pack:win": "npm run build && cross-env NODE_OPTIONS=--disable-warning=DEP0190 electron-builder --config electron-builder.json --win",
     "pack:mac": "npm run build && cross-env NODE_OPTIONS=--disable-warning=DEP0190 electron-builder --config electron-builder.json --mac",
+    "pack:linux": "npm run build && cross-env NODE_OPTIONS=--disable-warning=DEP0190 electron-builder --config electron-builder.json --linux",
     "postinstall": "electron-builder install-app-deps",
     "rebuild": "electron-builder install-app-deps",
     "lint": "eslint .",
